[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/img/Fondos/restaurante.jpg" type="Texture" id=2]
[ext_resource path="res://Restaurante.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/vender.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_5.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_1.png" type="Texture" id=6]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_4.png" type="Texture" id=7]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_6.png" type="Texture" id=8]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_2.png" type="Texture" id=9]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_3.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 524, 312 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 592.0
color = Color( 0.054902, 0.054902, 0.172549, 0.423529 )

[node name="Titulo" type="RichTextLabel" parent="."]
margin_left = 45.0
margin_top = 19.0
margin_right = 520.0
margin_bottom = 62.0
custom_fonts/normal_font = SubResource( 1 )
text = "Restaurante"

[node name="Monedas" type="RichTextLabel" parent="."]
margin_left = 567.0
margin_top = 17.0
margin_right = 936.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 51, 43 )
custom_fonts/normal_font = SubResource( 1 )
text = "0"

[node name="Vender Besugo" type="Button" parent="."]
margin_left = 47.0
margin_top = 126.0
margin_right = 423.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 133, 61 )
custom_fonts/font = SubResource( 2 )
text = "Vender Besugo"
flat = true
align = 0

[node name="Precio Besugo" type="RichTextLabel" parent="Vender Besugo"]
margin_left = 416.0
margin_top = 13.0
margin_right = 893.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 51, 43 )
custom_fonts/normal_font = SubResource( 1 )
text = "$"

[node name="Vender Besugo Rojo" type="Button" parent="."]
margin_left = 46.0
margin_top = 173.0
margin_right = 422.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 133, 61 )
custom_fonts/font = SubResource( 2 )
text = "Vender Besugo Rojo"
flat = true
align = 0

[node name="Precio Besugo Rojo" type="RichTextLabel" parent="Vender Besugo Rojo"]
margin_left = 418.0
margin_top = 13.0
margin_right = 894.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 51, 43 )
custom_fonts/normal_font = SubResource( 1 )
text = "$"

[node name="Vender Bonito" type="Button" parent="."]
margin_left = 47.0
margin_top = 224.0
margin_right = 423.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( 133, 61 )
custom_fonts/font = SubResource( 2 )
text = "Vender Bonito"
flat = true
align = 0

[node name="Precio Bonito" type="RichTextLabel" parent="Vender Bonito"]
margin_left = 417.0
margin_top = 8.0
margin_right = 892.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( -912, 146 )
custom_fonts/normal_font = SubResource( 1 )
text = "$"

[node name="Vender Caballa" type="Button" parent="."]
margin_left = 48.0
margin_top = 269.0
margin_right = 424.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 133, 61 )
custom_fonts/font = SubResource( 2 )
text = "Vender Caballa"
flat = true
align = 0

[node name="Precio Caballa" type="RichTextLabel" parent="Vender Caballa"]
margin_left = 417.0
margin_top = 10.0
margin_right = 890.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( -912, 146 )
custom_fonts/normal_font = SubResource( 1 )
text = "$"

[node name="Vender Limon" type="Button" parent="."]
margin_left = 47.0
margin_top = 317.0
margin_right = 423.0
margin_bottom = 378.0
rect_pivot_offset = Vector2( 133, 61 )
custom_fonts/font = SubResource( 2 )
text = "Vender Limon"
flat = true
align = 0

[node name="Precio Limon" type="RichTextLabel" parent="Vender Limon"]
margin_left = 419.0
margin_top = 12.0
margin_right = 889.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( -912, 146 )
custom_fonts/normal_font = SubResource( 1 )
text = "$"

[node name="Vender Mero" type="Button" parent="."]
margin_left = 50.0
margin_top = 369.0
margin_right = 426.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 133, 61 )
custom_fonts/font = SubResource( 2 )
text = "Vender Mero"
flat = true
align = 0

[node name="Precio Mero" type="RichTextLabel" parent="Vender Mero"]
margin_left = 414.0
margin_top = 12.0
margin_right = 888.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( -912, 146 )
custom_fonts/normal_font = SubResource( 1 )
text = "$"

[node name="Volver" type="Button" parent="."]
pause_mode = 2
margin_left = 53.0
margin_top = 484.0
margin_right = 204.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 3 )
text = "Volver al mapa"

[node name="Vender" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 534, 35 )
scale = Vector2( 1.077, 0.921428 )
frames = SubResource( 4 )
frame = 5
playing = true

[connection signal="tree_entered" from="." to="." method="_on_Control_tree_entered"]
[connection signal="pressed" from="Vender Besugo" to="." method="_on_Vender_Besugo_pressed"]
[connection signal="pressed" from="Vender Besugo Rojo" to="." method="_on_Vender_Besugo_Rojo_pressed"]
[connection signal="pressed" from="Vender Bonito" to="." method="_on_Vender_Bonito_pressed"]
[connection signal="pressed" from="Vender Caballa" to="." method="_on_Vender_Caballa_pressed"]
[connection signal="pressed" from="Vender Limon" to="." method="_on_Vender_Limon_pressed"]
[connection signal="pressed" from="Vender Mero" to="." method="_on_Vender_Mero_pressed"]
[connection signal="pressed" from="Volver" to="." method="_on_Volver_pressed"]
